tests/security/print/output.txt
ERROR: TaintedData - input.hack:1:7 - Data from a URL query string found its way to an HTML tag using path $_GET --ExpressionFetch(ArrayValue, "name")--> $_GET['name'] (input.hack:1:7) --Default--> call to echo (input.hack:1:7) --Default--> echo#1